--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
 <h1>wordCloudOnMap</h1>
+<div id="floating-panel">
+      <input id='btn' type="button" value="Toggle visibility" onclick="overlay.toggle();"></input>
+    </div>
 <div id="googleMap" style="width:100%;height:600px;"></div>
 <!--I am just a tets message-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRjEKFMy8HAOsjvXReBQ6wtOvvbnWbZZ4"></script>
