--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 <body>
 <h1>wordCloudOnMap</h1>
-<div id="floating-panel">
+<div id="menu">
       <input id='btn' type="button" value="Toggle visibility" onclick="overlay.toggle();"></input>
-    </div>
+      <select name="game" id="game">
+            <option value="0">SelectGame</option>
+      </select>
+      <button id= 'bt1'>Img1</button>
+      <button id = 'bt2'>Img2</button>
+</div>
+
 <div id="googleMap" style="width:100%;height:600px;"></div>
 <!--I am just a tets message-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRjEKFMy8HAOsjvXReBQ6wtOvvbnWbZZ4"></script>
-<script src="wordCloud.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="test.js"></script>
 </body>
 </html>
