--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <select name="game" id="game">
             <option value="0">SelectGame</option>
       </select>
-      <button id= 'bt1'>Img1</button>
-      <button id = 'bt2'>Img2</button>
+      <button id='bt1' onclick="overlay.toggle();">bnt1</button>
+      <button id='bt2'>bnt2</button>
 </div>
 
 <div id="googleMap" style="width:100%;height:600px;"></div>
